k8s/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ziggo
  labels:
    name: ziggo
