k8s/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ziggo-movie-app
  namespace: ziggo
  labels:
    app: ziggo-movie-app
    environment: production
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: ziggo-movie-app
